--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Locator</string>
 
     <string name = "location_format">%1$.5f : %2$.5f</string>
+    <string name="location_not_found">Не удалось определить</string>
 </resources>
