--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name = "location_format">%1$.5f : %2$.5f</string>
     <string name="location_not_found">Не удалось определить</string>
+    <string name="error_no_permission">Нет разрешений</string>
 </resources>
